...
    <string name="bottom_nav_title_favorites">Favorites</string>
    <string name="bottom_nav_title_search">Search</string>
    <string name="bottom_nav_title_home">Home</string>

    <!-- Fragment -Activity titles -->
    <string name="title_activity_main" translatable="false">Phone Library</string>
    <string name="title_activity_fragment_list">Search results</string>
    <string name="title_activity_fragment_detail">Detail</string>
    <string name="title_activity_fragment_favorites">Favorites</string>

    <!-- SEARCH screen -->
    <string name="open_detail">Open detail</string>
    <string name="search_by_name">Search by name</string>
...
