<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/navigation_favorites"
            android:icon="@drawable/ic_favorite_full_24dp"
            android:title="@string/bottom_nav_title_favorites"/>

    <item
            android:id="@+id/navigation_search"
            android:icon="@drawable/ic_search_black"
            android:title="@string/bottom_nav_title_search"/>

</menu>
